fix(markdown): fix image size not fitted to container width

--- a/src/markdown/MarkdownContent.module.less
+++ b/src/markdown/MarkdownContent.module.less
@@ -28,6 +28,7 @@
   p > img:only-child {
     display: block;
     margin: 0 auto;
+    max-width: 100%;
   }
 }
 
